--- a/database-service/package.json
+++ b/database-service/package.json
@@ -11,8 +11,12 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "lint": "eslint . --ext .ts",
-    "test": "jest --runInBand",
-    "test:watch": "jest --watch",
+    "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --testPathPatterns=tests/unit",
+    "test:integration": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --testPathPatterns=tests/integration",
+    "test:smoke": "jest --runInBand --testPathPatterns=tests/smoke",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:smoke",
+    "test": "npm run test:unit",
+    "test:watch": "jest --watch --testPathPatterns=tests/unit",
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
@@ -22,9 +26,11 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.1",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -33,6 +39,7 @@
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
+    "testcontainers": "^11.8.1",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
