--- a/database-service/tsconfig.json
+++ b/database-service/tsconfig.json
@@ -11,8 +11,9 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "types": ["node"]
+    "types": ["node"],
+    "isolatedModules": true
   },
-  "include": ["src", "prisma"],
-  "exclude": ["node_modules", "dist", "generated"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "tests", "generated"]
 }
