fix: fix swagger

--- a/database-service/tsconfig.json
+++ b/database-service/tsconfig.json
@@ -12,7 +12,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "types": ["node"],
-    "isolatedModules": true
+    "isolatedModules": true,
+    "removeComments": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "tests", "generated"]
