--- a/database-service/docker-compose.yml
+++ b/database-service/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   db:
     image: postgres:15
-    container_name: database_service_db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
@@ -17,8 +16,11 @@ services:
       retries: 5
 
   app:
-    build: .
-    container_name: database_service_backend
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        DATABASE_URL: "postgresql://postgres:password@db:5432/database_service_db?schema=public"
     depends_on:
       db:
         condition: service_healthy
@@ -28,9 +30,7 @@ services:
       PORT: 3000
     ports:
       - "3000:3000"
-    volumes:
-      - ./:/app
-    command: sh -c "npm ci && npm run build && npm start"
+    restart: unless-stopped
 
 volumes:
   db-data:
