--- a/database-service/docker-compose.yml
+++ b/database-service/docker-compose.yml
@@ -5,8 +5,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: database_service_db
-    ports:
-      - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
@@ -28,6 +26,11 @@ services:
       NODE_ENV: production
       DATABASE_URL: "postgresql://postgres:password@db:5432/database_service_db?schema=public"
       PORT: 3000
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: password
+      PRISMA_STRATEGY: push
     ports:
       - "3000:3000"
     restart: unless-stopped
